fix: align revolt server suggestion to bottom of modal

--- a/res/index.scss
+++ b/res/index.scss
@@ -36,6 +36,7 @@ a:visited {
 }
 
 .modal {
+    position: relative;
     margin: 5rem;
     padding: 1rem;
     background-color: #FFDAD9;
@@ -43,4 +44,11 @@ a:visited {
     flex: 1;
     max-width: calc(100% - 10rem);
     height: calc(100% - 10rem);
+}
+
+.bottom {
+    position: absolute;
+    bottom: 0;
+    padding: 1rem;
+    padding-left: 0;
 }
